--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py34, pypy
+envlist = py27, py35
 indexserver =
     default = http://pypi.douban.com/simple
 
@@ -9,4 +9,4 @@ deps =
     mock
     coverage
     urllib3
-commands = {envpython} setup.py nosetests --with-coverage --cover-package=uiautomator --cover-erase
+commands = {envpython} setup.py nosetests --with-coverage --cover-package=uiautomatorminus --cover-erase
